fixed spacing

--- a/src/styles/record.scss
+++ b/src/styles/record.scss
@@ -111,3 +111,11 @@
     align-items: center;
     font-family: 'Poiret One', cursive;
 }
+.rectext{
+    display: flex;
+    font-size: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poiret One', cursive;
+}
